# pink-transcriber-cpu

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md
src/pink_transcriber/: __init__.py
src/pink_transcriber/core/: model.py
